# BotBuddy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  notebook.ipynb  pyproject.toml  server.py  walk_through.md
agents/: base_agent.py  fnb_agent.py  research_agent.py
api/: chat.py  schemas.py
configs/: model_config.yaml
data/documents/: __init__.py  base_document_store.py  qdrant_store.py
data/embeddings/: __init__.py  base_embedding.py  voyage_4_nano.py
data/ingestion/: __init__.py  fnb_ingestor.py
data/scoring/: __init__.py  product_scorer.py
endpoints/: _agent_singleton.py  chat.py  schemas.py
memory/: conversation_memory.py  vector_memory.py
prompts/: __init__.py  base_prompt.py  research_prompt.py
services/: llm_service.py  vector_store_service.py
src/: llm_service.py  react_agent.py  settings.py
src/agents/: base_agent.py  fnb_agent.py  research_agent.py
src/agents/fnb/: agent.py
src/core/: agent.py  llm.py
src/core/prompts/: __init__.py  fnb_prompt.py  root_prompt.py
src/memory/: vector_memory.py
src/prompts/: __init__.py  fnb_prompt.py
src/services/: llm_service.py
src/tools/: get_product_detail_tool.py  menu_search_tool.py
src/utils/: helpers.py  logger.py  retry.py  settings.py  tracing.py
tests/: test_agent_integration.py  test_documents.py  test_embeddings.py  test_fnb_tools.py  test_llm_service.py  test_scoring.py  test_tools.py
tools/: base_tool.py  calculator_tool.py  get_product_detail_tool.py  get_recommendations_tool.py  menu_search_tool.py  web_search_tool.py
utils/: retry.py
(+30 files in other folders)
