[project]
name = "scanx-agent"
version = "0.1.0"
description = "ScanX Agent for customer service"

requires-python = ">=3.11"

dependencies = [
    "chromadb>=1.5.1",
    "ddgs>=9.11.1",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-litellm>=0.5.1",
    "langchain-anthropic>=1.3.3",
    "langchain-openai>=1.1.10",
    "langfuse>=3.14.5",
    "langgraph>=1.0.9",
    "litellm>=1.81.15",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "langchain-google-genai>=4.2.1",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "sse-starlette>=3.3.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "memory*", "agents*", "configs*", "services*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
